--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@types/toastify-js": "^1.12.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "font-awesome": "^4.7.0",
     "font-awesome-icons": "^1.6.0",
     "rxjs": "~6.6.0",
+    "toastify-js": "^1.12.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
