--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@types/toastify-js": "^1.12.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
